[project]
name = "clingen-svi-calibrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Himanshu Sharma", email = "sharmh15@li03c03.chimera.hpc.mssm.edu" },
    { name = "Charles Vaske", email = "charlie@seavaske.com" }
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
]

[project.scripts]
svi-calibrate = "clingen_svi_calibrate:main"
svi-calibrate-example1 = "clingen_svi_calibrate.examples.example1:main"
svi-calibrate-example2 = "clingen_svi_calibrate.examples.example2:main"
svi-calibrate-example3 = "clingen_svi_calibrate.examples.example3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
